--- a/style.css
+++ b/style.css
@@ -69,6 +69,11 @@ a{color:inherit;text-decoration:none}
    color:#cfe8ff; background:#0a3b79;
 }
 .btn--outline:hover{border-color:#4f6b8f}
+@media (max-width:800px){
+  .btn--outline {
+    font-size: 8px;
+  }
+}
 .btn--primary{
   background: #0a3b79; color:var(--white);
   box-shadow: var(--shadow);
@@ -107,6 +112,7 @@ a{color:inherit;text-decoration:none}
   display:grid; grid-template-columns: 1.1fr .5fr; gap:32px;
   padding:100px 0 140px;
 }
+
 .hero__text {
     padding: 100px;
 }
@@ -118,7 +124,19 @@ a{color:inherit;text-decoration:none}
 .text-blue{color: var(--blue)}
 .subtitle{color: var(--muted); font-size:clamp(16px,2vw,20px); margin:0 0 24px}
 .hero__ctas{display:flex; gap:12px; flex-wrap:wrap}
+@media(max-width:800px) 
+{
+  .hero__grid {
+    width: 90%;
+  }
+  .hero__text {
+    padding: 10px;
+}
+.hero__text h1{
+  font-size: 60px;
+}
 
+}
 /* Card do formulário */
 .card{
   background-color: #040c27b6;
