--- a/style.css
+++ b/style.css
@@ -234,6 +234,11 @@ a{color:inherit;text-decoration:none}
     font-family: 'Poppins';
     font: bold;
 }
+@media(max-width:800px){
+  .pillars__intro h3{
+    font-size: 38px;
+}
+}
 .pillars__cards {
     width: 40%;
     margin-top: 20% ;
@@ -339,6 +344,11 @@ a{color:inherit;text-decoration:none}
     font-family: 'Roboto';
     font-size: 64px;
     font: bolder;
+}
+@media(max-width:800px){
+  .section-title{
+    font-size: 44px;
+  }
 }
 .moves {
     width: 100%;
@@ -499,6 +509,7 @@ a{color:inherit;text-decoration:none}
   display:grid; grid-template-columns: 1.2fr .8fr .8fr; gap:24px; padding:36px 0;
 }
 #logoFooter {
+  margin-left: 20px;
     width: 150px;
 }
 .footer__brand p{color:#9fb0c9; margin-top:8px}
